manifests/test/actual/Deployment-actual-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: application
    app.kubernetes.io/instance: actual
    app.kubernetes.io/name: actual-server
    app.kubernetes.io/part-of: actual
  name: actual-server
  namespace: actual
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: application
      app.kubernetes.io/instance: actual
      app.kubernetes.io/name: actual-server
      app.kubernetes.io/part-of: actual
  template:
    metadata:
      labels:
        app.kubernetes.io/component: application
        app.kubernetes.io/instance: actual
        app.kubernetes.io/name: actual-server
        app.kubernetes.io/part-of: actual
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app.kubernetes.io/component: application
                  app.kubernetes.io/instance: actual
                  app.kubernetes.io/name: actual-server
                  app.kubernetes.io/part-of: actual
              topologyKey: kubernetes.io/hostname
      containers:
        - env:
            - name: ACTUAL_OPENID_CLIENT_SECRET
              valueFrom:
                secretKeyRef:
                  key: attribute.client_secret
                  name: keycloak-client-actual
            - name: NODE_EXTRA_CA_CERTS
              value: /bundle.pem
          envFrom:
            - configMapRef:
                name: actual-server-env-hfgb8d26kk
            - secretRef:
                name: actual-server-env
          image: ghcr.io/actualbudget/actual-server:26.7.0@sha256:e18b7fbfec6157a368fad4146563f397502e9da70a120aeaeac63b4977405d1c
          name: actual-server
          ports:
            - containerPort: 5006
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - mountPath: /bundle.pem
              name: extra-ca
              subPath: bundle.pem
            - mountPath: /data
              name: data
      securityContext:
        fsGroup: 1001
        runAsGroup: 1001
        runAsNonRoot: true
        runAsUser: 1001
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - configMap:
            name: actual-server-extra-ca
          name: extra-ca
        - name: data
          persistentVolumeClaim:
            claimName: actual-server-data
