manifests/test/actual/Gateway-actual-cloudflare.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Force=true,Replace=true
  labels:
    app.kubernetes.io/component: application
    app.kubernetes.io/instance: actual
    app.kubernetes.io/part-of: actual
  name: actual-cloudflare
  namespace: actual
spec:
  gatewayClassName: cloudflare
  infrastructure:
    annotations:
      lbipam.cilium.io/ips: 10.5.0.59
  listeners:
    - name: http
      port: 80
      protocol: HTTP
