manifests/test/actual/Gateway-actual.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Force=true,Replace=true
    cert-manager.io/cluster-issuer: cluster-ca
  labels:
    app.kubernetes.io/component: application
    app.kubernetes.io/instance: actual
    app.kubernetes.io/part-of: actual
  name: actual
  namespace: actual
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      lbipam.cilium.io/ips: 10.5.0.59
  listeners:
    - hostname: actual.10.5.0.59.nip.io
      name: actual
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - kind: Secret
            name: actual-gateway-tls
        mode: Terminate
