manifests/test/actual/Service-actual-server.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: application
    app.kubernetes.io/instance: actual
    app.kubernetes.io/name: actual-server
    app.kubernetes.io/part-of: actual
  name: actual-server
  namespace: actual
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 5006
  selector:
    app.kubernetes.io/component: application
    app.kubernetes.io/instance: actual
    app.kubernetes.io/name: actual-server
    app.kubernetes.io/part-of: actual
