manifests/test/actual/v1_namespace_actual.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/instance: actual
    app.kubernetes.io/part-of: actual
  name: actual
